--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "printWidth": 120
   },
   "dependencies": {
-    "hapi": "^18.1.0"
+    "handlebars": "^4.1.0",
+    "hapi": "^18.1.0",
+    "inert": "^5.1.2",
+    "vision": "^5.4.4"
   }
 }
